<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#EEEEEE" />


        <TextView
            android:id="@+id/setting_share"
            style="@style/textViewForSettings"
            android:layout_width="match_parent"
            android:text="@string/share_this_app" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#EEEEEE" />

        <TextView
            style="@style/textViewForSettings"
            android:text="@string/rate_us" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#EEEEEE" />

        <TextView
            style="@style/textViewForSettings"
            android:text="@string/leave_feedback" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#EEEEEE" />

        <TextView
            android:id="@+id/setting_clear"
            style="@style/textViewForSettings"
            android:text="@string/clear_history"
            android:textColor="@color/colorTextClearHistory" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#EEEEEE" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
