<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:padding="16dp"

        tools:context=".ui.result.ResultFragment">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="Result"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="260dp"
            android:background="@drawable/background_history_cards"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="260dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/category"
                android:textColor="@color/colorBlack"

                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"

            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear1">

            <TextView
                android:layout_width="100dp"

                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:padding="14dp"
                android:text="@string/difficulty"
                android:textAlignment="center"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/correctAnswers"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:gravity="center_vertical"
                android:padding="14dp"
                android:text="@string/correct_answers"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:padding="14dp"
                android:text="@string/result"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear2">

            <TextView
                android:id="@+id/resultDifficulty"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resultCorrectAnswers"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:text="@string/category2"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resultPercentage"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="45dp"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/background_correct"
            android:text="@string/finish"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
