<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="kg.geektech.quiz_app.ui.main.MainViewModel" />

        <variable
            name="model"
            type="kg.geektech.quiz_app.models.TriviaCategories" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/quiz_frag"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quiz"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="#000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp" />


        <ImageView
            android:id="@+id/ar_tut"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="90dp"
            android:src="@drawable/ic_ar_tut"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ar_tut">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Question amount"
                android:textColor="@color/colorGreyText"
                android:textSize="16sp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/amount_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="330dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear1">


            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seek_bar"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:valueFrom="1"
                android:max="20"
                android:thumbTint="#BE52F2"


                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="81dp"
                android:layout_height="16dp"
                android:text="@string/category"
                android:textColor="@color/colorGreyText" />

            <Spinner
                android:id="@+id/spinner1"
                style="@style/spinner"

                />

            <TextView
                android:layout_width="81dp"
                android:layout_height="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/difficulty"
                android:textColor="@color/colorGreyText" />

            <Spinner
                android:id="@+id/spinner2"
                style="@style/spinner"
                android:entries="@array/difficulty" />

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="60dp"

                android:layout_marginEnd="15dp"
                android:background="@drawable/background_button"
                android:text="@string/start"
                android:textSize="15sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="380dp"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
